# sf-utils

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: api-design-reviewer.md  jira-integration-engineer.md  pragmatic-shipper.md  prd-writer.md  principal-code-reviewer.md  qa-quality-assurance.md  security-auditor.md
.claude/commands/: sf-create-ticket.md  sf-develop-ticket.md  sf-plan-project.md  sf-sprint-runner.md
examples/: attachment_create_typed_table.py  contentdocument_create_typed_table.py  contentversion_create_typed_table.py  crud_contact.py  query_accounts.py
projects/: .gitkeep
scripts/: setup-db.ps1  setup-db.sh
sf_utils/: __init__.py  cli.py  cli_status.py  client.py  exceptions.py  query.py  retry.py  sobjects.py
sf_utils/db/: __init__.py  connection.py  parser.py  schema.py  types.py
sf_utils/sync/: __init__.py  bulk_sync.py  config.py  rest_sync.py  soql_loader.py  state.py
soql/: .gitignore  .gitkeep  attachment.soql  content_document.soql  content_version.soql
tests/: __init__.py  test_aggregate_types.py  test_bulk_sync.py  test_cli.py  test_client.py  test_db_connection.py  test_db_schema.py  test_exceptions.py  test_jwt_auth.py  test_query.py  test_rest_sync.py  test_retry.py  test_retry_integration.py  test_sobjects.py  test_soql_loader.py  test_status_command.py  test_sync.py  test_sync_config.py  test_sync_state.py
