[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-utils"
version = "0.1.0"
description = "Salesforce utility functions using SalesforcePy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "SalesforcePy>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
